修改  更换Base64工具，升级Lombok依赖版本，升级mysql-connector版本